@@ -59,16 +59,7 @@ ospf6_reset_mcastloop ()
 void
 ospf6_set_pktinfo ()
 {
-  u_int on = 1;
-#ifdef IPV6_RECVPKTINFO	/*2292bis-01*/
-  if (setsockopt (ospf6_sock, IPPROTO_IPV6, IPV6_RECVPKTINFO,
-                  &on, sizeof (u_int)) < 0)
-    zlog_warn ("Network: set IPV6_RECVPKTINFO failed: %s", strerror (errno));
-#else /*RFC2292*/
-  if (setsockopt (ospf6_sock, IPPROTO_IPV6, IPV6_PKTINFO,
-                  &on, sizeof (u_int)) < 0)
-    zlog_warn ("Network: set IPV6_PKTINFO failed: %s", strerror (errno));
-#endif
+  setsockopt_ipv6_pktinfo (ospf6_sock, 1);
 }
 
 void
