@@ -1,3 +1,8 @@
+2004-07-23 Paul Jakma <paul@dishone.st>
+
+	* ospf6_main.c: Delete LOG_PERROR, not portable.
+	* ospf6_network.c: (ospf6_set_pktinfo) use setsockopt_ipv6_pktinfo
+
 2004-07-06  Yasuhiro Ohara  <yasu@sfc.wide.ad.jp>
 
 	* ospf6_message.c, ospf6_interface.c: add a command to configure
